fixed header issus

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -70,7 +71,7 @@
                         </blockquote>
                         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
                             <a href="index.html" class="btn-get-started">Get Started</a>
-                            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                            <a href="https://youtu.be/6LCiqhOsj5w?list=RDMM6LCiqhOsj5w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                         </div>
                     </div>
                 </div>
@@ -160,7 +161,7 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
                 <h2>Our Services</h2>
-                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                <p>Customer support 24/7 day & night......</p>
             </div>
             <!-- End Section Title -->
 
@@ -169,61 +170,59 @@
                 <div class="row gy-4">
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-                        <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="fas fa-car" style="color: #f57813;"></i></div>
                         <div>
-                            <h4 class="title">Lorem Ipsum</h4>
-                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Car-Customer Support</h4>
+                            <p class="description">24/7 assistance for listing & buyer queries.
+                            Vehicle inspection guidance aur pre-sale checklist.
+                            Financing aur documentation support.
+                            Secure transaction tips aur fraud prevention advice.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                        <div class="icon flex-shrink-0"><i class="bi bi-card-checklist" style="color: #15a04a;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="fas fa-bicycle" style="color: #15a04a;"></i></div>
                         <div>
-                            <h4 class="title">Dolor Sitema</h4>
-                            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Cycle-Customer Support</h4>
+                            <p class="description">Quick help for posting second-hand & new cycles.Condition reporting template aur image tips.Local pickup coordination aur safe exchange advice.Student/discount queries ke liye support.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                        <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #d90769;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="fas fa-truck" style="color: #d90769;"></i></div>
                         <div>
-                            <h4 class="title">Sed ut perspiciatis</h4>
-                            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Truck-Customer Support</h4>
+                            <p class="description">Dedicated team for heavy-vehicle listings aur paperwork.Transport scheduling aur logistics coordination support.Price negotiation guidance aur valuation tools help.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                        <div class="icon flex-shrink-0"><i class="bi bi-binoculars" style="color: #15bfbc;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="fas fa-motorcycle" style="color: #15bfbc;"></i></div>
                         <div>
-                            <h4 class="title">Magni Dolores</h4>
-                            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Bike-Customer Support</h4>
+                            <p class="description">Live help for fast bike listings aur photos guidance.Test-ride coordination aur local pickup assistance.Simple payment options aur invoice support.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-                        <div class="icon flex-shrink-0"><i class="bi bi-brightness-high" style="color: #f5cf13;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="bi bi-scooter" style="color: #f5cf13;"></i></div>
                         <div>
-                            <h4 class="title">Nemo Enim</h4>
-                            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Scooty-Customer Support</h4>
+                            <p class="description">Fast listing support aur city-wise visibility tips.Battery/engine condition checklist for buyers.Local test-drive arrangement help.Payment protection aur seller verification guidance.</p>
+                        
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-                        <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week" style="color: #1335f5;"></i></div>
+                        <div class="icon flex-shrink-0"><i class="fas fa-tractor" style="color: #1335f5;"></i></div>
                         <div>
-                            <h4 class="title">Eiusmod Tempor</h4>
-                            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-                            <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                            <h4 class="title">Tractor-Customer  Support</h4>
+                            <p class="description">Farmers & dealers ke liye dedicated support line.Inspection checklist aur working-condition verification.Financing options aur subsidy/documentation guidance.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
@@ -244,9 +243,9 @@
                 <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
                     <div class="col-xl-10">
                         <div class="text-center">
-                            <h3>Call To Action</h3>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <a class="cta-btn" href="#">Call To Action</a>
+                            <h3>Sell Your Vehicle Today</h3>
+                            <p>List your car, bike, scooty, truck, cycle, or tractor on PikSell and connect with thousands of buyers instantly.</p>
+                            <a class="cta-btn" href="contact.html">Call To Action</a>
                         </div>
                     </div>
                 </div>
@@ -261,39 +260,39 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-                        <h3 class="mb-0">Powerful Features for</h3>
-                        <h3>Your Business</h3>
+                        <h3 class="mb-0">Powerfull Features of</h3>
+                        <h3>PikSell</h3>
 
                         <div class="row gy-4">
 
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
-                                    <i class="bi bi-eye" style="color: #ff8b2c;"></i>
-                                    <span>Easy Cart Features</span>
+                                    <i class="bi bi-clock" style="color: #ff8b2c;"></i>
+                                    <span>24/7 Customer Support</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
 
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
-                                    <i class="bi bi-infinity" style="color: #5578ff;"></i>
-                                    <span>Sit amet consectetur adipisicing</span>
+                                    <i class="bi bi-bell" style="color: #5578ff;"></i>
+                                    <span>Get notified as soon as new vehicles are listed</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
 
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
-                                    <i class="bi bi-mortarboard" style="color: #e80368;"></i>
-                                    <span>Ipsum Rerum Explicabo</span>
+                                    <i class="bi bi-star" style="color: #e80368;"></i>
+                                    <span>Buy with confidence from trusted sellers</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
 
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
-                                    <i class="bi bi-star" style="color: #ffa76e;"></i>
-                                    <span>Easy Cart Features</span>
+                                    <i class="bi bi-diamond" style="color: #ffa76e;"></i>
+                                    <span>Post your ad in just a few easy steps</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
@@ -308,8 +307,8 @@
 
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
-                                    <i class="bi bi-camera-video" style="color: #4233ff;"></i>
-                                    <span>Sit amet consectetur adipisicing</span>
+                                    <i class="bi bi-camera" style="color: #4233ff;"></i>
+                                    <span>Our team portfolio available here</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
@@ -317,7 +316,7 @@
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
                                     <i class="bi bi-brightness-high" style="color: #29cc61;"></i>
-                                    <span>Ipsum Rerum Explicabo</span>
+                                    <span>Greate plateform for sale purchase</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
@@ -325,7 +324,7 @@
                             <div class="col-md-6">
                                 <div class="icon-list d-flex">
                                     <i class="bi bi-activity" style="color: #ff5828;"></i>
-                                    <span>Easy Cart Features</span>
+                                    <span>Highly recomended</span>
                                 </div>
                             </div>
                             <!-- End Icon List Item-->
@@ -344,9 +343,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                            <h4>Labore Sdio Lidui<br>Bonde Naruto</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam nostrum molestias doloremque quae delectus odit minima corrupti blanditiis quo animi!</p>
-                            <a href="#about" class="btn-get-started">Get Started</a>
+                            <h4>PikSell–A Trusted Platform</h4>
+                            <p>100% Secure and reliable vehicle marketplace<br>
+                            Verified sellers and genuine buyers only<br>
+                            Transparent deals with no hidden charges<br>
+                            Thousands of happy users trust PikSell every day</p>
+                            <a href="about.html" class="btn-get-started">About Me!</a>
                         </div>
                     </div>
                 </div>
@@ -366,8 +368,7 @@
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span class="sitename">PickSell</span>
                         </a>
-                        <p>PickSell is your trusted platform to buy and sell Cars, Bikes, Trucks, and Scooters with ease. We provide the best service and smooth user experience for every deal. Safe, fast, and reliable transactions – that’s our promise. PickSell
-                            – Your need, our service.</p>
+                        <p>PickSell is your trusted platform to buy and sell Cars, Bikes, Trucks, and Scooters with ease. We provide the best service and smooth user experience for every deal. Safe, fast, and reliable transactions – that’s our promise. PickSell Your need, our service.</p>
                         <div class="social-links d-flex mt-4">
                             <a href=""><i class="bi bi-twitter-x"></i></a>
                             <a href=""><i class="bi bi-facebook"></i></a>
@@ -377,34 +378,26 @@
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About us</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
-                        <h4>Our Services</h4>
+                        <h4>Owner's</h4>
                         <ul>
-                            <li><a href="#">Web Design</a></li>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">Product Management</a></li>
-                            <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Graphic Design</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
                         <h4>Contact Us</h4>
-                        <p>A108 Adam Street</p>
-                        <p>New York, NY 535022</p>
-                        <p>United States</p>
-                        <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                        <p><strong>Email:</strong> <span>info@example.com</span></p>
+                        <p>Malerkotla,148023</p>
+                        <p>Punjab,India.</p>
+                        <p class="mt-4"><strong>Phone:</strong> <span></span></p>
+                        <p><strong>Email:</strong> <span></span></p>
                     </div>
 
                 </div>
@@ -412,7 +405,7 @@
         </div>
 
         <div class="container copyright text-center">
-            <p>© <span>2025</span> <strong class="px-1 sitename">PickSell</strong> <span>All Rights Reserved</span></p>
+            <p>© <span>2025</span> <strong class="px-1 sitename">PickSell</strong> <span>All Rights Reserved.</span></p>
         </div>
 
     </footer>
@@ -434,6 +427,21 @@
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script>
+  async function saveVisitorIP() {
+    try {
+      const res = await fetch("/.netlify/functions/save-ip");
+      const data = await res.json();
+      console.log("Visitor IP saved:", data.ip);
+    } catch (err) {
+      console.error("Error saving IP:", err);
+    }
+  }
+
+  // Call on page load
+  saveVisitorIP();
+</script>
+
 
 </body>
 
