--- a/about.html
+++ b/about.html
@@ -256,8 +256,8 @@
                         <h4>Contact Us</h4>
                         <p>Malerkotla,148023</p>
                         <p>Punjab,India.</p>
-                        <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                        <p><strong>Email:</strong> <span>info@example.com</span></p>
+                        <p class="mt-4"><strong>Phone:</strong> <span></span></p>
+                        <p><strong>Email:</strong> <span></span></p>
                     </div>
 
                 </div>
