--- a/index.html
+++ b/index.html
@@ -427,21 +427,29 @@
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
-    <script>
-  async function saveVisitorIP() {
-    try {
-      const res = await fetch("/.netlify/functions/save-ip");
-      const data = await res.json();
-      console.log("Visitor IP saved:", data.ip);
-    } catch (err) {
-      console.error("Error saving IP:", err);
-    }
-  }
+   <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Call on page load
-  saveVisitorIP();
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAA2we02IZ1TR9r_ZQtGXQj-ahH3VRFrTI",
+    authDomain: "piksell-d4bdb.firebaseapp.com",
+    projectId: "piksell-d4bdb",
+    storageBucket: "piksell-d4bdb.firebasestorage.app",
+    messagingSenderId: "517877631803",
+    appId: "1:517877631803:web:cdebf4fef317bd21cc851e",
+    measurementId: "G-5HS8M1D574"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </script>
-
 
 </body>
 
