--- a/index.html
+++ b/index.html
@@ -428,14 +428,9 @@
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
    <script type="module">
-  // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore.js";
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
     apiKey: "AIzaSyAA2we02IZ1TR9r_ZQtGXQj-ahH3VRFrTI",
     authDomain: "piksell-d4bdb.firebaseapp.com",
@@ -446,10 +441,29 @@
     measurementId: "G-5HS8M1D574"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  const db = getFirestore(app);
+
+  // Visitor IP fetch karna
+  fetch("https://api.ipify.org?format=json")
+    .then(res => res.json())
+    .then(async data => {
+      const visitorIP = data.ip;
+
+      // Firestore me save karna
+      try {
+        await addDoc(collection(db, "visitors"), {
+          ip: visitorIP,
+          timestamp: new Date().toISOString()
+        });
+        console.log("Visitor IP saved!");
+      } catch (err) {
+        console.error("Error saving IP:", err);
+      }
+    })
+    .catch(err => console.error("Error fetching IP:", err));
 </script>
+
 
 </body>
 
