fixed insta link commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
               <div class="portfolio-info">
                 <h4>Aanis Rattan</h4>
                 <a href="assets/img/portfolio/insta1.jpeg" title="Aanis Rattan" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://www.instagram.com/aanishrattan?igsh=bjBwaTNlMGpydHA2" title="Instagram" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <!-- <a href="https://www.instagram.com/aanishrattan?igsh=bjBwaTNlMGpydHA2" title="Instagram" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
             </div><!-- End Portfolio Item -->
 
